# animCurveMatch-maya

./: .gitignore  CMakeLists.txt  README.md  test.py
include/: animCurveMatchCmd.h  animCurveMatchUtils.h  curveMatchCmd.h  curveMatchUtils.h
include/utilities/: debugUtils.h
src/: animCurveMatchCmd.cpp  animCurveMatchMain.cpp  curveMatchCmd.cpp  curveMatchMain.cpp
